# esp32-p4

csi_camera_st7789/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32p4
csi_camera_st7789/main/: CMakeLists.txt  config.h  idf_component.yml  main.c
main/: main2.c
spi_lcd_touch/main/: Kconfig.projbuild  idf_component.yml  spi_lcd_touch_example_main.c
uvc/: README.md  sdkconfig.defaults.esp32p4
